fix(modal): pull out z-index

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -15,6 +15,5 @@
   &--overlay {
     align-items: baseline;
     background: rgba(255, 255, 255, 0.9);
-    z-index: z(9990);
   }
 }
